<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:contentDescription="@string/image_button"
        android:id="@+id/image_button_woof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_centerInParent="true"
        />

    <ImageView
        android:contentDescription="@string/image_view"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/image_button_woof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_drawable"/>

    <LinearLayout
        android:id="@+id/next_and_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_button_woof"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:contentDescription="@string/left_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/left"/>

        <ImageButton
            android:contentDescription="@string/right_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/right"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/next_and_previous"
        android:layout_centerHorizontal="true"
        android:drawableStart="@mipmap/woof_launcher"
        android:text="@string/button_with_image"
        />

</RelativeLayout>